tests/snapshots/human_output__auth_list_empty.snap
---
source: tests/human_output.rs
description: Auth list before any login.
---
$ dn auth list
No profiles. Run `dn auth login` to create one.
