tests/snapshots/human_output__host_delete.snap
---
source: tests/human_output.rs
description: Host delete with --yes names the deleted host.
---
$ dn host delete host-KQ4ZB7MXRWEPNA2C5TJ3YVHLDI --yes
Deleted host "Build Server" (host-KQ4ZB7MXRWEPNA2C5TJ3YVHLDI).
--- stderr
note: using <API_URL> (from DEFINED_API_URL)
